--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,6 @@
     <title>HIFI butikken</title>
 </head>
 <body>
-    <h1>this is hifi butikken</h1>
+    <h1>dette er hifi butikken</h1>
 </body>
 </html>
